--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,6 @@
-/* Add your CSS here */
+body, html {
+  -webkit-user-select: none;  /* Safari */
+  -moz-user-select: none;     /* Firefox */
+  -ms-user-select: none;      /* Internet Explorer/Edge */
+  user-select: none;          /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+}
